--- a/content.html
+++ b/content.html
@@ -28,7 +28,7 @@
       <div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar">
           <div class="container-fluid">
-            <!-- <a class="heading" href="firstPage.html">EZ Bulletin</a> -->
+            <!-- <a class="heading" href="index.html">EZ Bulletin</a> -->
             <a class="heading" href="landingPage.html">
               <img src="favicon-32x32.ico" alt="" />Bulletin
             </a>
