--- a/content.html
+++ b/content.html
@@ -29,7 +29,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar">
           <div class="container-fluid">
             <!-- <a class="heading" href="index.html">EZ Bulletin</a> -->
-            <a class="heading" href="landingPage.html">
+            <a class="heading" href="index.html">
               <img src="favicon-32x32.ico" alt="" />Bulletin
             </a>
             <button
